updating pageguide signup link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="upsell">
           <strong>What's Tracelytics?</strong><br/>
           Full stack application tracing.<br>Watch your entire environment in one place.
-          <a class="start" title="Start Tracing" href="http://www.tracelytics.com/signup?utm_campaign=pageguide&utm_source=pageguide">start tracing now!</a>
+          <a class="start" title="Start Tracing now!" href="http://www.tracelytics.com/pageguide-trial/">start tracing now!</a>
         </div>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
