add images to example page

--- a/example/index.html
+++ b/example/index.html
@@ -3,32 +3,47 @@
 <head>
     <link rel="stylesheet" href="../css/pageguide.css" />
     <style type="text/css">
+        body {
+            font-family: Helvetica, Arial, sans-serif;
+        }
         .wrapper {
+            margin: 0 auto;
             width: 100%;
+            max-width: 1025px;
         }
         .data-block {
-            margin: 0 auto;
-            width: 400px;
-            height: 500px;
-            padding: 100px;
+            width: 100%;
+            min-height: 700px;
+        }
+        .data-block img {
+            width: 100%;
         }
     </style>
 </head>
 <body>
     <div class="wrapper">
+        <h1>Pageguide Example</h1>
         <div class="data-block first_element_to_target">
-            <h3>FIRST</h1>
+            <h3>FIRST</h3>
+            <img src="img/img1.jpg" alt="Brisbane"/>
+            <p><a href="http://www.flickr.com/photos/ipyo/4948872706/in/photostream/" target="_blank">Credit</a></p>
         </div>
         <div class="data-block" id="second_element_to_target">
             <h3>SECOND</h3>
+            <img src="img/img2.jpg" alt="Glen Canyon"/>
+            <p><a href="http://www.flickr.com/photos/alanenglish/7523729938/" target="_blank">Credit</a></p>
         </div>
         <div class="data-block third_element_to_target">
             <div class="is_here">
                 <h3>THIRD</h3>
+                <img src="img/img3.jpg" alt="London"/>
+                <p><a href="http://www.flickr.com/photos/fishyfish/200610788/" target="_blank">Credit</a></p>
             </div>
         </div>
         <div class="data-block" id="fourth_element_to_target">
             <h3>FOURTH</h3>
+            <img src="img/img4.jpg" alt="Paros"/>
+            <p><a href="http://www.flickr.com/photos/97373666@N00/3123603304/in/photostream/" target="_blank">Credit</a></p>
         </div>
     </div>
         
