--- a/index.html
+++ b/index.html
@@ -117,6 +117,13 @@
         </li>
     </ul>
 
+    <div id="tlyPageGuideWelcome">
+        <p>Welcome to my new page! pageguide is here to help you learn more.</p>
+        <button class="tlypageguide_start">let's go</button>
+        <button class="tlypageguide_ignore">not now</button>
+        <button class="tlypageguide_dismiss">got it, thanks</button>
+    </div>
+
     <script src="javascripts/scale.fix.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <!-- Step 1: Include JavaScript -->
