copy & style tweaks to example modal

--- a/index.html
+++ b/index.html
@@ -118,10 +118,13 @@
     </ul>
 
     <div id="tlyPageGuideWelcome">
-        <p>Welcome to my new page! pageguide is here to help you learn more.</p>
-        <button class="tlypageguide_start">let's go</button>
-        <button class="tlypageguide_ignore">not now</button>
-        <button class="tlypageguide_dismiss">got it, thanks</button>
+        <h3>Welcome to pageguide.js</h3>
+        <p>Here's an example welcome message: Interested in pageguide.js? Fire up our tour to learn more!</p>
+        <div class="modal-button-container">
+            <button class="tlypageguide_start">let's go</button>
+            <button class="tlypageguide_ignore">not now</button>
+            <button class="tlypageguide_dismiss">got it, thanks</button>
+        </div>
     </div>
 
     <script src="javascripts/scale.fix.js"></script>
