--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="stylesheet" href="../css/pageguide.css" />
+    <link rel="stylesheet" href="../dist/css/pageguide.min.css" />
     <style type="text/css">
         body {
             font-family: Helvetica, Arial, sans-serif;
@@ -46,7 +46,7 @@
             <p><a href="http://www.flickr.com/photos/97373666@N00/3123603304/in/photostream/" target="_blank">Credit</a></p>
         </div>
     </div>
-        
+
     <ul id="tlyPageGuide" data-tourtitle="REPLACE THIS WITH A TITLE">
       <li class="tlypageguide_left" data-tourtarget=".first_element_to_target">
         <div>
@@ -76,9 +76,9 @@
         <button class="tlypageguide_dismiss">got it, thanks</button>
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script type="text/javascript" src="../js/pageguide.js"></script>
+    <script type="text/javascript" src="../dist/js/pageguide.min.js"></script>
     <script type="text/javascript">
-        jQuery(document).ready(function() { 
+        jQuery(document).ready(function() {
             var pageguide = tl.pg.init();
         });
     </script>
