[testsv1] test existence of default elements

--- a/js/tests/index.html
+++ b/js/tests/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>Pageguide Test Suite</title>
 
+  <!-- css -->
+  <link rel="stylesheet" href="../../dist/css/pageguide.min.css" />
+
   <!-- jquery -->
   <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 
