--- a/example/index.html
+++ b/example/index.html
@@ -74,7 +74,7 @@
     </div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/pageguide.js"></script>
+    <script type="text/javascript" src="/dist/js/pageguide.min.js"></script>
     <script type="text/javascript">
         jQuery(document).ready(function() {
             var pageguide = tl.pg.init();
