[benchmark] use benchmark.js instead of jslitmus

--- a/js/tests/benchmark/index.html
+++ b/js/tests/benchmark/index.html
@@ -4,22 +4,33 @@
   <title>Pageguide Speed Suite</title>
 
   <!-- css -->
-  <link rel="stylesheet" href="../../../dist/css/pageguide.min.css" />
+  <link rel="stylesheet" href="/dist/css/pageguide.min.css" />
 
   <!-- jquery -->
   <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 
-  <!-- jslitmus -->
-  <script src="http://www.broofa.com/Tools/JSLitmus/JSLitmus.js"></script>
+  <!-- benchmark.js -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.backbone.js"></script>
+  <script src="benchmark.js"></script>
 
   <!--  plugin sources -->
-  <script src="../../../js/pageguide.js"></script>
+  <script src="/dist/js/pageguide.min.js"></script>
 
   <!-- speed tests -->
   <script src="test_speed_pageguide.js"></script>
 
+  <style type="text/css">
+    #test_element {
+      position: absolute;
+      top: -10000px;
+      left: -10000px;
+      width: 1000px;
+      height: 1000px;
+    }
+  </style>
 </head>
 <body>
-  <div id="test_element" style="overflow:hidden; width: 1px; height:1px;"></div>
+  <div id="test_element"></div>
+  <table id="benchmarkResults"></table>
 </body>
 </html>
