[benchmark] hide pg elements while running tests

--- a/js/tests/benchmark/index.html
+++ b/js/tests/benchmark/index.html
@@ -20,6 +20,9 @@
   <script src="test_speed_pageguide.js"></script>
 
   <style type="text/css">
+    #tlyPageGuideWrapper, #tlyPageGuideMessages, .tlypageguide_toggle {
+      z-index: -1;
+    }
     #test_element {
       position: absolute;
       top: -10000px;
