--- a/js/tests/benchmark/index.html
+++ b/js/tests/benchmark/index.html
@@ -10,7 +10,7 @@
   <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 
   <!-- benchmark.js -->
-  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.backbone.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
   <script src="benchmark.js"></script>
 
   <!--  plugin sources -->
@@ -62,12 +62,7 @@
 <body>
   <div class="benchmarkDisplay">
     <h1>Pageguide Speed Suite</h1>
-    <table id="benchmarkResults">
-      <tr>
-      <th>Test Name</th>
-      <th>Result</th>
-      </tr>
-    </table>
+    <table id="benchmarkResults"></table>
     <button class="runSuite" disabled="disabled">Run Suite</button>
   </div>
   <div id="test_element"></div>
