--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Pageguide by tracelytics</title>
+    <title>Pageguide by AppNeta</title>
 
     <link rel="stylesheet" href="stylesheets/reset.css">
     <link rel="stylesheet" href="stylesheets/styles.css">
@@ -21,8 +21,8 @@
     <div class="wrapper">
       <header>
         <div class="intro">
-          <a href="http://www.tracelytics.com?utm_campaign=pageguide&utm_source=pageguide" title="Tracelytics.com" class="tracelytcs_logo">
-            Tracelytics FTW
+          <a href="http://www.appneta.com?ref__c=00000" title="Appneta.com" class="tracelytcs_logo">
+            AppNeta FTW
           </a>
           <h1 class="one">pageguide.js</h1>
           <p>An interactive guide for web page elements using jQuery and CSS3.</p>
@@ -34,9 +34,9 @@
           <li><a href="https://github.com/tracelytics/pageguide">View On <strong>GitHub</strong></a></li>
         </ul>
         <div class="upsell">
-          <strong>What's Tracelytics?</strong><br/>
-          Full stack application tracing.<br>Watch your entire environment in one place.
-          <a class="start" title="Start Tracing now!" href="http://www.tracelytics.com/pageguide-trial/">start tracing now!</a>
+          <strong>What's AppNeta?</strong><br/>
+          Full stack application performance insight.<br>Watch your entire environment in one place.
+          <a class="start" title="Start Tracing now!" href="http://www.appneta.com/products/traceview/trial/?ref__c=00000">start tracing now!</a>
         </div>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
