--- a/index.html
+++ b/index.html
@@ -149,5 +149,15 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+    <script type="text/javascript">
+	$.ajax({
+            url: '//munchkin.marketo.net/munchkin.js',
+            dataType: 'script',
+            cache: true,
+            success: function() {
+                Munchkin.init('466-AGZ-592');
+	    }
+	});
+    </script>
   </body>
 </html>
