Remove unused refcode.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="wrapper">
       <header>
         <div class="intro">
-          <a href="http://www.appneta.com?ref__c=20279" title="Appneta.com" class="tracelytcs_logo">
+          <a href="http://www.appneta.com" title="Appneta.com" class="tracelytcs_logo">
             AppNeta FTW
           </a>
           <h1 class="one">pageguide.js</h1>
