--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="wrapper">
       <header>
         <div class="intro">
-          <a href="http://www.appneta.com" title="Appneta.com" class="tracelytcs_logo">
+          <a href="http://www.appneta.com?utm_campaign=pageguide&utm_source=pageguide" title="Appneta.com" class="tracelytcs_logo">
             AppNeta FTW
           </a>
           <h1 class="one">pageguide.js</h1>
@@ -36,7 +36,7 @@
         <div class="upsell">
           <strong>What's AppNeta?</strong><br/>
           Full stack application performance insight.<br>Watch your entire environment in one place.
-          <a class="start" title="Start Tracing now!" href="http://www.appneta.com/products/traceview-free-account/?ref__c=20279">start tracing now!</a>
+          <a class="start" title="Start Tracing now!" href="http://www.appneta.com/products/traceview-free-account/?ref__c=20279&utm_campaign=pageguide&utm_source=pageguide">start tracing now!</a>
         </div>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
