update welcome references in example & tests

--- a/example/index.html
+++ b/example/index.html
@@ -90,7 +90,7 @@
             </ul>
         </div>
 
-        <div id="tlyPageGuideWelcome">
+        <div class="tlyPageGuideWelcome">
             <p>Welcome to my new page! pageguide is here to help you learn more.</p>
             <button class="tlypageguide_start">let's go</button>
             <button class="tlypageguide_ignore">not now</button>
