Update to reflect new home at SolarWinds

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Pageguide by AppNeta</title>
+    <title>Pageguide by SolarWinds</title>
 
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
@@ -40,8 +40,8 @@
         <div class="intro">
           <h1 class="one">pageguide.js</h1>
           <p>An interactive guide for web page elements using jQuery and CSS3.</p>
-          <a href="http://www.appneta.com?utm_campaign=pageguide&utm_source=pageguide" title="Appneta.com" class="tracelytcs_logo">
-            AppNeta FTW
+          <a href="https://www.appoptics.com?utm_campaign=pageguide&utm_source=pageguide" title="Appneta.com" class="tracelytcs_logo">
+            AppOptics FTW
           </a>
         </div>
         <p class="view"><a href="https://github.com/tracelytics/pageguide">View the Project on GitHub <small>tracelytics/pageguide</small></a></p>
@@ -51,9 +51,9 @@
           <li><a href="https://github.com/tracelytics/pageguide">View On <strong>GitHub</strong></a></li>
         </ul>
         <div class="upsell">
-          <strong>What's AppNeta?</strong><br/>
+          <strong>What's AppOptics?</strong><br/>
           Full stack application performance insight.<br>Watch your entire environment in one place.
-          <a class="start" title="Start Tracing now!" href="http://www.appneta.com/products/traceview-free-account/?ref__c=20279&utm_campaign=pageguide&utm_source=pageguide">start tracing now!</a>
+          <a class="start" title="Check it out!" href="https://www.appoptics.com/?utm_campaign=pageguide&utm_source=pageguide">start tracing now!</a>
         </div>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
@@ -153,28 +153,6 @@
       $(document).ready(function() {
         tl.pg.init();
       });
-    </script>
-
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-17096589-7']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
-    <script type="text/javascript">
-	$.ajax({
-            url: '//munchkin.marketo.net/munchkin.js',
-            dataType: 'script',
-            cache: true,
-            success: function() {
-                Munchkin.init('466-AGZ-592');
-	    }
-	});
     </script>
   </body>
 </html>
