--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="intro">
           <h1 class="one">pageguide.js</h1>
           <p>An interactive guide for web page elements using jQuery and CSS3.</p>
-          <a href="https://www.appoptics.com?utm_campaign=pageguide&utm_source=pageguide" title="Appneta.com" class="tracelytcs_logo">
+          <a href="https://my.appoptics.com/lpw?redirect_to=home&utm_source=github&utm_medium=appoptics-logo-banner&utm_campaign=pageguide-js" title="AppOptics" class="tracelytcs_logo">
             AppOptics FTW
           </a>
         </div>
@@ -53,7 +53,7 @@
         <div class="upsell">
           <strong>What's AppOptics?</strong><br/>
           Full stack application performance insight.<br>Watch your entire environment in one place.
-          <a class="start" title="Check it out!" href="https://www.appoptics.com/?utm_campaign=pageguide&utm_source=pageguide">start tracing now!</a>
+          <a class="start" title="Check it out!" href="https://my.appoptics.com/lpw?redirect_to=home&utm_source=github&utm_medium=appoptics-logo-banner&utm_campaign=pageguide-js">start tracing now!</a>
         </div>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
